--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/koa": "^2.13.1",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.4.2",
-    "koa-body": "^4.2.0"
+    "ethereumjs-tx": "^2.1.2",
+    "koa-body": "^4.2.0",
+    "web3": "^1.3.5"
   },
   "devDependencies": {
     "@types/node": "^15.0.1",
