--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
+    "@types/body-parser": "^1.19.0",
     "@types/koa": "^2.13.1",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.4.2",
+    "@types/koa__cors": "^3.0.2",
+    "@types/morgan": "^1.9.2",
     "ethereumjs-tx": "^2.1.2",
+    "koa": "^2.13.1",
     "koa-body": "^4.2.0",
+    "koa-router": "^10.0.0",
+    "morgan": "^1.10.0",
     "web3": "^1.3.5"
   },
   "devDependencies": {
